# mirco-lab

FINAL_FINAL/: CMakeLists.txt  Makefile  moc_mainwindow.cpp  test
final/: Makefile  led1.c  led2.c  led3.c  led4.c  main.cpp  test.pro
lab8/: lab8_semaphore.c  mutex2.c
lab9/lab9/lab9/: lab9.pro
lab9/sample/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  sample.pro
week1/sort/: Makefile  main.cpp  sort.cpp  sort.h
week2/: Makefile  main  main.cpp
week3/: boa.conf  led.html  mime.types  submit.cpp
week4/: LAB4  Makefile  moc_mainwindow.cpp  ui_mainwindow.h
week5/: Makefile  lab5.c  lab5.ko  lab5.mod.c  modules.order
week6/: Makefile  demo.c  demo.mod.c  read.cpp  write.cpp
week7/: Makefile  demo.c  read.c  write.c
week8/: Makefile  popenl  popenl.c  week8.c  week8.cpp
